fixed nav bar spacing error.

--- a/style.css
+++ b/style.css
@@ -241,7 +241,7 @@ ion-icon:hover {
     
 
     .nav_links {
-        height: 10%;
+        height: 5%;
     }
 
 }
